cmake_minimum_required(VERSION 3.4.1)

option(ENABLE_G_TEST "Enable gtest" OFF)
option(OPTIMIZE_CLASS_TYPE "Enable optimize class type." OFF)

option(ENABLE_BAN_WARNING "Enable warning as error." ON)
option(ENABLE_TINY "Enable tiny so." OFF)
option(ENABLE_GLM "Enable glm." OFF)
option(ENABLE_ASAN "Enable ASAN." OFF)
option(ENABLE_MEDIA_CODEC "Enable MediaCodec." ON)
option(ENABLE_FK "Compile film kilns." OFF)
option(ENABLE_SKIA_SRC "Compile with skia sources." OFF)
option(ENABLE_IJK "Compile with ijk ffmpeg." OFF)
option(ENABLE_ASAN "Enable Asan." OFF)

if (OPTIMIZE_CLASS_TYPE)
    add_definitions(-D__FK_OPTIMIZE_CLASS_TYPE__)
endif ()

set(SOURCE_CPP_PATH ${CMAKE_SOURCE_DIR}/src/main/cpp)
add_subdirectory(${CMAKE_SOURCE_DIR}/../../../ fk.out)
add_subdirectory(${SOURCE_CPP_PATH}/native)
if(ENABLE_G_TEST)
    message(STATUS "ENABLE_G_TEST")
    add_subdirectory(${CMAKE_SOURCE_DIR}/src/test/cpp)
endif ()